--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,57 @@
-% qsr %
+@book{pattern-language,
+  address = {New York},
+  author = {Christopher Alexander and Sara Ishikawa and Murray Silverstein},
+  publisher = {Oxford University Press},
+  title = {A Pattern Language: Towns, Buildings, Construction},
+  year = 1977,
+}
+
+@inproceedings{carl,
+ author = {Schultz, Carl and Bhatt, Mehul},
+ title = {A multi-modal data access framework for spatial assistance systems: use-cases with the building information model (BIM/IFC)},
+ booktitle = {Proceedings of the 2nd ACM SIGSPATIAL International Workshop on Indoor Spatial Awareness},
+ series = {ISA '10},
+ year = {2010},
+ isbn = {978-1-4503-0433-7},
+ location = {San Jose, California},
+ pages = {39--46},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1865885.1865895},
+ doi = {http://doi.acm.org/10.1145/1865885.1865895},
+ acmid = {1865895},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {decision-support systems, indoor environments, interoperability, ontology, semantics, spatial assistance, spatial computing, spatial data models},
+} 
+
+
+
+@inproceedings{Almendros-Jimenez,
+ author = {Almendros-Jimenez},
+ %Almendros-Jim\'{e}nez, Jes\'{u}s M.},
+ title = {Constraint logic programming over sets of spatial objects},
+ booktitle = {Proceedings of the 2005 ACM SIGPLAN workshop on Curry and functional logic programming},
+ series = {WCFLP '05},
+ year = {2005},
+ isbn = {1-59593-069-8},
+ location = {Tallinn, Estonia},
+ pages = {32--42},
+ numpages = {11},
+ acmid = {1085106},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CLP, logic programming},
+} 
+
+@book{compgeom:2000,
+  author = {Mark de Berg and Marc van Kreveld and Mark Overmars and Otfried Schwarzkopf},
+  edition = {Second},
+  pages = 367,
+  publisher = {Springer-Verlag},
+  title = {Computational Geometry: Algorithms and Applications},
+  year = 2000
+}
+
 @article{freksa1991qsr,
     author = {Freksa, C.},
     journal = {Cognitive and Linguistic Aspects of Geographic Space},
@@ -19,8 +72,6 @@
     location = {France}
 }
 
-% related works %
-
 @article{IntelligentCritic,
  author = {Chun, Hon Wai and Ming-Kit Lai, Edmund},
  title = {Intelligent Critic System for Architectural Design},
@@ -37,7 +88,7 @@
 
 @MISC{KoileTAC,
     author = {Kimberle Koile},
-    title = {An Intelligent Assistant For Conceptual Design: Informed Search Using a Mapping of Abstract         Qualities to Physical Form},
+    title = {An Intelligent Assistant For Conceptual Design: Informed Search Using a Mapping of Abstract	 Qualities to Physical Form},
     journal = {Design Computing and Cognition},
     year = {2004}
 }
@@ -179,6 +230,17 @@ url = "http://www.sciencedirect.com/science/article/B6V0J-3VTB87X-4/2/7bed50d3bf
 author = "Thom Frühwirth"
 }
 
+@inproceedings{Fruhwirth94,
+  author    = {Thom W. Fr{\"u}hwirth},
+  title     = {Constraint Handling Rules},
+  booktitle = {Constraint Programming},
+  year      = {1994},
+  pages     = {90-107},
+  crossref  = {DBLP:journals/lncs/1994-910},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 @article{formfunction,
 title = "The tall office building artistically considered",
 journal = "Lippincott's Magazine",
@@ -242,4 +304,103 @@ author = "Louis Sullivan"
     title = {{Investigating Design: A Review of Forty Years of Design Research}},
     volume = {20},
     year = {2004}
+}
+
+@inproceedings{Stavroulaki,
+ author = {Gianna Stavroulaki and John Peponis},
+ title = {The spatial construction of seeing at Castelvecchio},
+ booktitle = {Proceedings of the 4th International Space Syntax Symposium},
+ year = {2003},
+ pages = {339--346},
+ location = {London},
+ }
+
+@inproceedings{Bitgood02,
+ author = {Stephen Bitgood},
+ title = {Environmental Psychology in Museums, Zoos, and other Exhibition Centers},
+ booktitle = {Handbook of Environmental Psychology},
+ year = {2002},
+ pages = {461--480},
+}
+
+@inproceedings{Bitgood95,
+ author = {Stephen Bitgood and Sherri Lankford},
+ title = {Museum Orientation and Circulation},
+ booktitle = {Visitor Behavior},
+ year = {1995},
+}
+
+@inproceedings{Bitgood92,
+ author = {Stephen Bitgood and W. Hines and W. Ford},
+ title = {Visitor circulation through a changing  exhibits  gallery},
+ booktitle = {In Visitor Studies: Theory, Research, and Practice},
+ year = {1992},
+ location = {Jacksonville, AL}
+}
+
+@BOOK{Melton,
+author = {Arthur Melton},
+title = {Problems of Installation in Museums of Art},
+year = {1935},
+}
+
+@BOOK{Falk,
+author = {John Falk and Lynn Dierking},
+title = {The Museum Experience},
+year = {1948},
+location = {Washington, D.C.},
+ publisher = {Howells House},
+}
+
+@BOOK{Museum,
+ author = {Philip Adams and Douglas Allan and Paul Coremans and Hiroshi Daifuku and Molly Harrison and Bruno Molajoli and Pierre Schommer},
+ title = {The Organization of Museums: practical advice},
+ year = {1960},
+ location = {Paris, France},
+ publisher = {United Nations},
+ }
+
+@inproceedings{Porter,
+ author = {Mildred Porter},
+ title = {Behavior of The Average Visitor in The Peabody Museum of Natural History},
+ year = {1938},
+ location = {Washington, D.X.},
+  publisher = {The American Association of Museums},
+ }
+
+@MISC{IFC,
+    author = {A Trial Implementation and Thomas Froese and Associate Professor and Francois Grobler and John Ritzenthaler and Kevin Yu and Software Developer R and Sheryl Staub},
+    title = {Industry Foundation Classes for Project Management - A Trial Implementation},
+    year = {1999}
+}
+
+
+@BOOK{Tostoes,
+       author = {Tostoes, Carapinha, and Corte-Real},
+       title = {Gulbenkian: Architecture and Landscape},
+         publisher = {Calouste Gulbenkian Foundation},
+}
+
+@misc{ArchiCAD,
+  title = {Graphisoft Inc. ArchiCAD 14},
+  year = {2010},
+  url = {http://www.graphisoft.com/},
+}
+
+@misc{Gulbenkian,
+  title = {Calouste Gulbenkian Foundation. Museum Calouste Gulbenkian},
+  year = {2010},
+  url = {http://www.museu.gulbenkian.pt/main.asp?lang=pt},
+}
+
+@misc{Philadelphia,
+  title = {Philadelphia Museum of Art},
+  year = {2010},
+  url = {http://www.philamuseum.org/visit/54-5.html?page=1},
+}
+
+@misc{DesignSpace,
+  title = {DesignSpace},
+  year = {2010},
+  url = {http://www.sfbtr8.uni-bremen.de/designspace.html},
 }
