--- a/thesis.bib
+++ b/thesis.bib
@@ -24,11 +24,8 @@
  keywords = {decision-support systems, indoor environments, interoperability, ontology, semantics, spatial assistance, spatial computing, spatial data models},
 } 
 
-
-
 @inproceedings{Almendros-Jimenez,
- author = {Almendros-Jimenez},
- %Almendros-Jim\'{e}nez, Jes\'{u}s M.},
+ author = {Almendros-Jim\'{e}nez, Jes\'{u}s},
  title = {Constraint logic programming over sets of spatial objects},
  booktitle = {Proceedings of the 2005 ACM SIGPLAN workshop on Curry and functional logic programming},
  series = {WCFLP '05},
@@ -67,7 +64,7 @@
 @article{bhatt-spatial-computing,
     author = {Bhatt, M. and Freksa, C.},
     journal = {SF International Workshop on Studying Visual and Spatial Reasoning for Design Creativity SDC'10},
-    title = {{Spatial Computing for Design: An Artificial Intelligence Perspective}},
+    title = {Spatial Computing for Design: An Artificial Intelligence Perspective},
     year = {2010},
     location = {France}
 }
@@ -125,7 +122,7 @@
  }
 
 @article{Calderon06,
- author = {Calderón C, Cavazza M and Diaz D},
+ author = {Calderón, C. and Cavazza, M. and Diaz, D.},
  title = {CLP a technology for the interactive resolution of spatial configuration tasks in a virtual environment},
  journal = {Special Issue Architectural informatics},
  year = {2006},
@@ -141,7 +138,7 @@
  }
 
 @article{SEEDS,
- author = {\"{O}mer Akin and Rana Sen and Magd Donia and Ye Zhang},
+ author = {Akin, \"{O}. and Rana Sen and Magd Donia and Ye Zhang},
  title = {SEED-Pro: Computer-Assisted Architectural Programming in SEED},
  journal = {Journal of Architectural Engineering,},
  publisher = {ASCE},
@@ -151,7 +148,7 @@
  } 
 
 @article{Borrmann,
- author = {A. Borrman, J. Hyv\"{a}rinen and E. Rank},
+ author = {A. Borrman and J. Hyvarinen and E. Rank},
  title = {Spatial constraints in collaborative design processes},
  journal = {Proc. of the Int. Conf. on Intelligent Computing in Engineering (ICE'09)},
  year = {2009},
@@ -172,9 +169,9 @@ author = "L. Myers and J. Pohl",
 }
  
 @INPROCEEDINGS{Randell92aspatial,
-    author = {David A. Randell and Zhan Cui and Anthony G. Cohn},
+    author = {David Randell and Zhan Cui and Anthony Cohn},
     title = {A Spatial Logic based on Regions and Connection},
-    booktitle = {PROCEEDINGS 3RD INTERNATIONAL CONFERENCE ON KNOWLEDGE REPRESENTATION AND REASONING},
+    booktitle = {Proceedings 3rd International Conference of Knowledge Representation and Reasoning},
     year = {1992},
     publisher = {}
 }
@@ -227,7 +224,7 @@ note = "",
 issn = "0743-1066",
 doi = "DOI: 10.1016/S0743-1066(98)10005-5",
 url = "http://www.sciencedirect.com/science/article/B6V0J-3VTB87X-4/2/7bed50d3bf24dffea89c2cf9574dd614",
-author = "Thom Frühwirth"
+author = "Thom W. Fr{\"u}hwirth"
 }
 
 @inproceedings{Fruhwirth94,
@@ -252,18 +249,15 @@ author = "Louis Sullivan"
 @book{Sterling:1986,
   address = {Cambridge (MA)},
   author = {Leon Sterling and Ehud Shapiro},
-  interhash = {da3799615a0ab69b57bf66ce3de47d5d},
-  intrahash = {321eebc10b64430a02ec974bec126056},
   publisher = {MIT Press},
   title = {The Art of Prolog},
   year = 1986,
   keywords = {prolog},
-  added-at = {2007-12-14T02:46:58.000+0100},
   biburl = {http://www.bibsonomy.org/bibtex/2321eebc10b64430a02ec974bec126056/diego_ma}
 }
 
 @article{Cohn:2001:QSR,
- author = {Cohn, A. G. and Hazarika, S. M.},
+ author = {Cohn, A. and Hazarika, S.},
  title = {Qualitative Spatial Representation and Reasoning: An Overview},
  journal = {Fundam. Inf.},
  volume = {46},
@@ -280,7 +274,7 @@ author = "Louis Sullivan"
  keywords = {Ontology, Qualitative Spatial Reasoning},
 }
 @inproceedings{Jaffar:1987:CLP,
- author = {Jaffar, J. and Lassez, J.-L.},
+ author = {Jaffar, J. and Lassez, J.},
  title = {Constraint logic programming},
  booktitle = {Proceedings of the 14th ACM SIGACT-SIGPLAN symposium on Principles of programming languages},
  series = {POPL '87},
@@ -369,38 +363,38 @@ location = {Washington, D.C.},
  }
 
 @MISC{IFC,
-    author = {A Trial Implementation and Thomas Froese and Associate Professor and Francois Grobler and John Ritzenthaler and Kevin Yu and Software Developer R and Sheryl Staub},
+    author = {Thomas Froese and Francois Grobler and John Ritzenthaler and Kevin Yu and Sheryl Staub},
     title = {Industry Foundation Classes for Project Management - A Trial Implementation},
     year = {1999}
 }
 
 
 @BOOK{Tostoes,
-       author = {Tostoes, Carapinha, and Corte-Real},
+       author = {Tostoes, Carapinha and Carapinha, A. and Corte-Real, P.},
        title = {Gulbenkian: Architecture and Landscape},
-         publisher = {Calouste Gulbenkian Foundation},
+       publisher = {Calouste Gulbenkian Foundation},
 }
 
 @misc{ArchiCAD,
   title = {Graphisoft Inc. ArchiCAD 14},
   year = {2010},
-  url = {http://www.graphisoft.com/},
+  note = "\texttt{http://www.graphisoft.com/}"
 }
 
 @misc{Gulbenkian,
   title = {Calouste Gulbenkian Foundation. Museum Calouste Gulbenkian},
   year = {2010},
-  url = {http://www.museu.gulbenkian.pt/main.asp?lang=pt},
+  note = "\texttt{http://www.museu.gulbenkian.pt/main.asp?lang=pt}"
 }
 
 @misc{Philadelphia,
   title = {Philadelphia Museum of Art},
   year = {2010},
-  url = {http://www.philamuseum.org/visit/54-5.html?page=1},
+  note = "\texttt{http://www.philamuseum.org/}"
 }
 
 @misc{DesignSpace,
-  title = {DesignSpace},
+  title = {Design Space},
   year = {2010},
-  url = {http://www.sfbtr8.uni-bremen.de/designspace.html},
+  NOTE = "\texttt{http://www.sfbtr8.uni-bremen.de/designspace.html}"
 }
