--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -110,7 +110,16 @@ A museum case study is presented to demonstrate the application of the CRR in a 
 \end{abstract}
 
 \begin{acknowledgements}
-I would like to thank Professor Franz Kurfess for ...
+
+\noindent Dr. Franz Kurfess: for all the guidance during my time as a graduate student and for supporting me in completing this thesis.\\ 
+
+\noindent Dr. Mehul Bhatt: for the opportunity to work in the Design Space group and for all the guidance and advice formulating my ideas for this thesis. \\
+
+\noindent My Parents: for all the support they have given me, especially during the last year as I completed this thesis. \\
+
+\noindent Justin Phillips: for being a good friend and helping me finish this thesis. \\
+
+\noindent Dr. Carl Schultz: for encouragement and insight into the process of completing a thesis.  \\
 
 %   Thank you...
 
