--- a/thesis.bib
+++ b/thesis.bib
@@ -376,25 +376,29 @@ location = {Washington, D.C.},
 }
 
 @misc{ArchiCAD,
-  title = {Graphisoft Inc. ArchiCAD 14},
+  title = {{Graphisoft Inc. ArchiCAD 14}},
+  key = {Graphisoft},
   year = {2010},
   note = "\texttt{http://www.graphisoft.com/}"
 }
 
 @misc{Gulbenkian,
-  title = {Calouste Gulbenkian Foundation. Museum Calouste Gulbenkian},
+  title = {{Calouste Gulbenkian Foundation. Museum Calouste Gulbenkian}},
+  key = {Calouste},
   year = {2010},
   note = "\texttt{http://www.museu.gulbenkian.pt/main.asp?lang=pt}"
 }
 
 @misc{Philadelphia,
-  title = {Philadelphia Museum of Art},
+  title = {{Philadelphia Museum of Art}},
+  key = {Philadelphia},
   year = {2010},
   note = "\texttt{http://www.philamuseum.org/}"
 }
 
 @misc{DesignSpace,
-  title = {Design Space},
+  title = {{Design Space}},
+  key = {Design},  
   year = {2010},
   NOTE = "\texttt{http://www.sfbtr8.uni-bremen.de/designspace.html}"
 }
